# lens

./: .env.development  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: README.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_lens_core.py  0001_portal_core.py  0002_tenant_jira_base.py
backend/lens/: __init__.py  config.py  logging.py  main.py
backend/lens/auth/: deps.py  oidc.py  session.py
backend/lens/cli/: dump_openapi.py  seed_dev.py  tenants.py
backend/lens/db/: base.py  engine.py  session.py  tenant.py
backend/lens/models/: __init__.py
backend/lens/models/core/: activities.py  audit_log.py  reports.py  sync_state.py  tenants.py  user_tenants.py  users.py
backend/lens/models/tenant/: jira_changelog.py  jira_comments.py  jira_issue_links.py  jira_issues.py  jira_sites.py  jira_worklogs.py
backend/lens/routers/: activity.py  auth.py  health.py  tenants.py  tickets.py
backend/lens/schemas/: activity.py  auth.py  sync.py  tenants.py  tickets.py
backend/lens/services/: activities.py  jira.py  jira_tenant.py  secrets_proxy.py  sync_envelope.py
backend/lens/workers/: jira.py
backend/tests/: conftest.py  test_activities_dedup.py  test_health.py  test_sync_envelope.py  test_tenant_isolation.py  test_ticket_mutations.py  test_worker_jira_cursor.py
deploy/: README.md  pull-deploy.sh
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json  tailwind.config.ts
(+38 files in other folders)
