[project]
name = "lens"
version = "0.1.0"
description = "Lens — Netsmart multi-client consulting app backend"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # web / api
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",

    # db
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # validation / settings
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.1",

    # http / auth
    "httpx>=0.27",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",

    # sync / resilience
    "aiolimiter>=1.1",
    "tenacity>=8.2",

    # logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24,<1.0",
    "testcontainers[postgres]>=4.0",
    "anyio>=4.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lens*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "A"]
ignore = [
    "E501",  # line length handled above
    "S101",  # assert used (pytest)
    "S608",  # SQL literal (we use text() with bound params)
    "B008",  # FastAPI Depends default
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"alembic/**" = ["S", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
